transition between colors

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,8 @@
     --ring: 215 20.2% 65.1%;
 
     --radius: 0.5rem;
+
+    --font-sans: Helvetica, Arial, sans-serif;
   }
 
   .dark {
@@ -77,6 +79,9 @@
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
+  }
+  html {
+    @apply font-sans;
   }
 
   body, html {
